--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Starter Snowpack App" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Starter Snowpack App</title>
+    <link rel="stylesheet" type="text/css" href="/static/index.css" />
+    <title>Reactie controller</title>
   </head>
   <body>
     <h1>Welcome to Snowpack!</h1>
-    <script type="module" src="/dist/index.js"></script>
+    <script type="module" src="/static/dist/index.js"></script>
   </body>
 </html>
